@@ -76,11 +76,7 @@
 
 /* GCC attributes  */
 
-#ifdef GCC_HAS_ATTRIBUTE_UNUSED
-#define RCS_UNUSED __attribute__ ((unused))
-#else
-#define RCS_UNUSED
-#endif
+#define RCS_UNUSED  _GL_UNUSED
 
 #ifdef GCC_HAS_ATTRIBUTE_NORETURN
 #define exiting __attribute__ ((noreturn))
